feat: add children to data grid

--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -112,6 +112,10 @@
     "@mui/x-data-grid": "^6.16.2",
     "@mui/material": "^5.14.13",
     "@mui/icons-material": "^5.14.13",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/utilities": "^3.2.1",
+    "@dnd-kit/modifiers": "^6.0.1",
     "@illa-public/user-role-utils": "workspace:*",
     "@illa-public/mixpanel-utils": "workspace:*",
     "@illa-public/code-editor": "workspace:*",
