feat: ✨ update guide step

--- a/apps/builder/src/config/guide/components.json
+++ b/apps/builder/src/config/guide/components.json
@@ -59,166 +59,81 @@
     }
   },
   {
-    "version": 0,
-    "displayName": "dataGrid1",
-    "parentNode": "bodySection1-bodySectionContainer1",
-    "showName": "dataGrid",
-    "childrenNode": null,
-    "type": "DATA_GRID_WIDGET",
-    "containerType": "EDITOR_SCALE_SQUARE",
-    "h": 38,
-    "w": 14,
-    "minH": 3,
+    "w": 18,
+    "h": 50,
     "minW": 1,
-    "x": 9,
-    "y": 25,
+    "minH": 3,
+    "x": 7,
+    "y": 9,
     "z": 0,
+    "showName": "dataGrid",
+    "type": "DATA_GRID_WIDGET",
+    "displayName": "dataGrid1",
+    "containerType": "EDITOR_SCALE_SQUARE",
+    "parentNode": "bodySection1-bodySectionContainer1",
+    "childrenNode": [],
     "props": {
+      "dataSourceMode": "dynamic",
+      "excludeHiddenColumns": true,
+      "dataSourceJS": "{{[\n  {\n    \"month\": \"April\",\n    \"users\": 3700,\n    \"incomes\": 4000\n  },\n  {\n    \"month\": \"May\",\n    \"users\": 5400,\n    \"incomes\": 8700\n  },\n  {\n    \"month\": \"June\",\n    \"users\": 6000,\n    \"incomes\": 12000\n  },\n  {\n    \"month\": \"July\",\n    \"users\": 8000,\n    \"incomes\": 14000\n  }\n]}}",
+      "dataSource": [],
+      "overFlow": "scroll",
+      "sortOrder": "default",
       "$dynamicAttrPaths": ["dataSourceJS"],
       "columns": [
         {
-          "aggregable": true,
-          "columnType": "auto",
-          "description": "",
-          "disableReorder": false,
-          "field": "charge",
-          "filterable": true,
-          "groupable": true,
-          "headerAlign": "left",
-          "headerName": "charge",
-          "hideable": true,
+          "field": "month",
+          "headerName": "month",
+          "width": 170,
           "isCalc": true,
-          "pinnable": true,
-          "resizable": true,
+          "description": "",
           "sortable": true,
-          "width": 170
+          "pinnable": true,
+          "filterable": true,
+          "hideable": true,
+          "aggregable": true,
+          "groupable": true,
+          "resizable": true,
+          "columnType": "auto",
+          "disableReorder": false,
+          "headerAlign": "left"
         },
         {
-          "aggregable": true,
-          "columnType": "auto",
-          "description": "",
-          "disableReorder": false,
-          "field": "email",
-          "filterable": true,
-          "groupable": true,
-          "headerAlign": "left",
-          "headerName": "email",
-          "hideable": true,
+          "field": "users",
+          "headerName": "users",
+          "width": 170,
           "isCalc": true,
-          "pinnable": true,
-          "resizable": true,
+          "description": "",
           "sortable": true,
-          "width": 170
+          "pinnable": true,
+          "filterable": true,
+          "hideable": true,
+          "aggregable": true,
+          "groupable": true,
+          "resizable": true,
+          "columnType": "auto",
+          "disableReorder": false,
+          "headerAlign": "left"
         },
         {
-          "aggregable": true,
-          "columnType": "auto",
-          "description": "",
-          "disableReorder": false,
-          "field": "expired_time",
-          "filterable": true,
-          "groupable": true,
-          "headerAlign": "left",
-          "headerName": "expired_time",
-          "hideable": true,
+          "field": "incomes",
+          "headerName": "incomes",
+          "width": 170,
           "isCalc": true,
-          "pinnable": true,
-          "resizable": true,
-          "sortable": true,
-          "width": 170
-        },
-        {
-          "aggregable": true,
-          "columnType": "auto",
           "description": "",
-          "disableReorder": false,
-          "field": "feature_flag",
-          "filterable": true,
-          "groupable": true,
-          "headerAlign": "left",
-          "headerName": "feature_flag",
-          "hideable": true,
-          "isCalc": true,
-          "pinnable": true,
-          "resizable": true,
           "sortable": true,
-          "width": 170
-        },
-        {
+          "pinnable": true,
+          "filterable": true,
+          "hideable": true,
           "aggregable": true,
-          "columnType": "auto",
-          "description": "",
-          "disableReorder": false,
-          "field": "id",
-          "filterable": true,
           "groupable": true,
-          "headerAlign": "left",
-          "headerName": "id",
-          "hideable": true,
-          "isCalc": true,
-          "pinnable": true,
           "resizable": true,
-          "sortable": true,
-          "width": 170
-        },
-        {
-          "aggregable": true,
           "columnType": "auto",
-          "description": "",
           "disableReorder": false,
-          "field": "img",
-          "filterable": true,
-          "groupable": true,
-          "headerAlign": "left",
-          "headerName": "img",
-          "hideable": true,
-          "isCalc": true,
-          "pinnable": true,
-          "resizable": true,
-          "sortable": true,
-          "width": 170
-        },
-        {
-          "aggregable": true,
-          "columnType": "auto",
-          "description": "",
-          "disableReorder": false,
-          "field": "name",
-          "filterable": true,
-          "groupable": true,
-          "headerAlign": "left",
-          "headerName": "name",
-          "hideable": true,
-          "isCalc": true,
-          "pinnable": true,
-          "resizable": true,
-          "sortable": true,
-          "width": 170
-        },
-        {
-          "aggregable": true,
-          "columnType": "auto",
-          "description": "",
-          "disableReorder": false,
-          "field": "start_time",
-          "filterable": true,
-          "groupable": true,
-          "headerAlign": "left",
-          "headerName": "start_time",
-          "hideable": true,
-          "isCalc": true,
-          "pinnable": true,
-          "resizable": true,
-          "sortable": true,
-          "width": 170
+          "headerAlign": "left"
         }
-      ],
-      "dataSource": [],
-      "dataSourceJS": "{{postgresql1.data}}",
-      "dataSourceMode": "dynamic",
-      "excludeHiddenColumns": true,
-      "overFlow": "scroll",
-      "sortOrder": "default"
-    }
+      ]
+    },
+    "version": 0
   }
 ]
