feat: ✨ update Doc

--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -53,6 +53,7 @@
     "@illa-public/member-page": "workspace:*",
     "@illa-public/mixpanel-utils": "workspace:*",
     "@illa-public/public-types": "workspace:*",
+    "@illa-public/public-configs": "workspace:*",
     "@illa-public/record-editor": "workspace:*",
     "@illa-public/resource-generator": "workspace:*",
     "@illa-public/select": "workspace:*",
