--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -56,6 +56,7 @@
     "@illa-public/record-editor": "workspace:*",
     "@illa-public/resource-generator": "workspace:*",
     "@illa-public/sso-module": "workspace:*",
+    "@illa-public/styleis-plugin": "workspace:*",
     "@illa-public/text-link": "workspace:*",
     "@illa-public/upgrade-modal": "workspace:*",
     "@illa-public/user-data": "workspace:*",
@@ -121,7 +122,6 @@
     "rehype-sanitize": "^5.0.1",
     "remark-gfm": "^3.0.1",
     "streamsaver": "^2.0.6",
-    "stylis": "^4.1.3",
     "tern": "^0.24.3",
     "toposort": "^2.0.2",
     "ts-key-enum": "^2.0.12",
@@ -156,7 +156,6 @@
     "@types/react-window-infinite-loader": "^1.0.6",
     "@types/redux-logger": "^3.0.9",
     "@types/streamsaver": "^2.0.1",
-    "@types/stylis": "^4.0.2",
     "@types/tern": "^0.23.5",
     "@types/toposort": "^2.0.4",
     "@types/uuid": "^9.0.4",
