--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -29,6 +29,10 @@
     "@codemirror/search": "^6.2.3",
     "@codemirror/state": "^6.2.0",
     "@codemirror/view": "^6.7.2",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@editorjs/checklist": "^1.5.0",
     "@editorjs/code": "^2.8.0",
     "@editorjs/editorjs": "^2.27.2",
@@ -51,8 +55,8 @@
     "@illa-public/layout-auto-change": "workspace:*",
     "@illa-public/market-agent": "workspace:*",
     "@illa-public/mixpanel-utils": "workspace:*",
-    "@illa-public/public-types": "workspace:*",
     "@illa-public/public-configs": "workspace:*",
+    "@illa-public/public-types": "workspace:*",
     "@illa-public/record-editor": "workspace:*",
     "@illa-public/resource-generator": "workspace:*",
     "@illa-public/sso-module": "workspace:*",
@@ -62,6 +66,9 @@
     "@illa-public/user-data": "workspace:*",
     "@illa-public/user-role-utils": "workspace:*",
     "@illa-public/utils": "workspace:*",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
+    "@mui/x-data-grid-premium": "^6.17.0",
     "@protobuf-ts/runtime": "^2.8.3",
     "@react-google-maps/api": "^2.18.1",
     "@rjsf/core": "^5.10.0",
@@ -100,6 +107,7 @@
     "re-resizable": "^6.9.9",
     "react-big-calendar": "^1.6.9",
     "react-chartjs-2": "^4.3.1",
+    "react-code-blocks": "^0.1.4",
     "react-dnd": "^16.0.1",
     "react-dnd-touch-backend": "^16.0.1",
     "react-helmet-async": "^1.3.0",
@@ -126,15 +134,7 @@
     "toposort": "^2.0.2",
     "ts-key-enum": "^2.0.12",
     "uuid": "^8.3.2",
-    "react-code-blocks": "^0.1.4",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz",
-    "@mui/x-data-grid-premium": "^6.17.0",
-    "@mui/material": "^5.14.13",
-    "@mui/icons-material": "^5.14.13",
-    "@dnd-kit/sortable": "^7.0.2",
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/utilities": "^3.2.1",
-    "@dnd-kit/modifiers": "^6.0.1"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "devDependencies": {
     "@mdx-js/rollup": "^2.3.0",
