--- a/.github/workflows/build-all-in-one-image.yml
+++ b/.github/workflows/build-all-in-one-image.yml
@@ -18,19 +18,21 @@ jobs:
     name: Build docker image
     runs-on: ubuntu-latest
     steps:
-      - name: Set IMAGE_TAG
+      - name: Set build args
         run: |
           if [ "${{ github.event_name }}" = "release" ]; then
             TAG=${{ github.event.release.tag_name }}
             VERSION=v${TAG#illa-builder@}
             echo "IMAGE_TAG=${VERSION}" >> $GITHUB_ENV
+            echo "BUILD_SBE_BRANCH=main" >> $GITHUB_ENV
+            echo "BUILD_BE_BRANCH=main" >> $GITHUB_ENV
+            echo "BUILD_FE_BRANCH=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
           else
             echo "IMAGE_TAG=${{ github.ref_name }}" >> $GITHUB_ENV
+            echo "BUILD_SBE_BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
+            echo "BUILD_BE_BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
+            echo "BUILD_FE_BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
           fi
-
-      - name: Set BE_BRANCH
-        run: |
-          echo "BE_BRANCH=${{ github.event_name == 'release' && 'main' || 'develop' }}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
         with:
@@ -40,7 +42,7 @@ jobs:
       - name: Build Docker Image
         run: |
           cd ./build-all-in-one-image
-          docker build -f ./dockerfile -t illasoft/illa-builder:${IMAGE_TAG} --build-arg FE=${IMAGE_TAG} --build-arg BE=${BE_BRANCH} --build-arg SBE=${BE_BRANCH} --no-cache --build-arg ILLA_MUI_LICENSE=${ILLA_MUI_LICENSE} .
+          docker build -f ./dockerfile -t illasoft/illa-builder:${IMAGE_TAG} --build-arg FE=${BUILD_FE_BRANCH} --build-arg BE=${BUILD_BE_BRANCH} --build-arg SBE=${BUILD_SBE_BRANCH} --no-cache --build-arg ILLA_MUI_LICENSE=${ILLA_MUI_LICENSE} .
 
       - name: Push Docker image
         run: |
