--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -71,6 +71,7 @@
     "@mui/x-data-grid-premium": "^6.17.0",
     "@protobuf-ts/runtime": "^2.8.3",
     "@react-google-maps/api": "^2.18.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "@rjsf/core": "^5.10.0",
     "@rjsf/utils": "^5.10.0",
     "@rjsf/validator-ajv8": "^5.10.0",
@@ -87,6 +88,7 @@
     "chart.js": "^3.9.1",
     "chroma-js": "^2.4.2",
     "copy-to-clipboard": "^3.3.2",
+    "dayjs": "^1.11.10",
     "deep-diff": "^1.0.2",
     "downloadjs": "^1.4.7",
     "editorjs-html": "^3.4.3",
@@ -94,6 +96,7 @@
     "fflate": "^0.8.1",
     "framer-motion": "^10.16.4",
     "fuse.js": "^6.6.2",
+    "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
@@ -112,11 +115,14 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.30.0",
     "react-hotkeys-hook": "^4.4.1",
+    "react-i18next": "^13.5.0",
     "react-icons": "^4.7.1",
     "react-markdown": "^8.0.3",
     "react-pdf": "^6.2.2",
     "react-player": "^2.11.2",
+    "react-redux": "^8.1.3",
     "react-rnd": "^10.3.7",
+    "react-router-dom": "^6.14.0",
     "react-selecto": "^1.22.0",
     "react-slick": "^0.29.0",
     "react-use": "^17.4.0",
@@ -165,8 +171,6 @@
     "eslint-config-illa": "workspace:*",
     "protoc": "1.0.4",
     "rollup-plugin-visualizer": "^5.9.2",
-    "tsconfig": "workspace:*",
-    "vite-plugin-checker": "^0.6.2",
-    "vite-plugin-svgr": "^4.2.0"
+    "tsconfig": "workspace:*"
   }
 }
