--- a/apps/cloud/package.json
+++ b/apps/cloud/package.json
@@ -34,13 +34,18 @@
     "@illa-public/user-data": "workspace:*",
     "@illa-public/user-role-utils": "workspace:*",
     "@illa-public/utils": "workspace:*",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^0.26.1",
-    "dayjs": "^1.11.7",
+    "dayjs": "^1.11.10",
     "fuse.js": "^6.6.2",
+    "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.2",
     "lodash": "^4.17.21",
     "react-hook-form": "^7.40.0",
+    "react-i18next": "^13.5.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.14.0",
     "swr": "^2.2.4",
     "uuid": "^9.0.0"
   },
@@ -51,8 +56,6 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint-config-illa": "workspace:*",
     "rollup-plugin-visualizer": "^5.9.0",
-    "tsconfig": "workspace:*",
-    "vite-plugin-checker": "^0.6.0",
-    "vite-plugin-svgr": "^4.2.0"
+    "tsconfig": "workspace:*"
   }
 }
