--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/node": "^18.18.13",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.54.0",
     "eslint-config-illa": "workspace:*",
     "husky": "^8.0.3",
