--- a/.github/workflows/build-all-in-one-image.yml
+++ b/.github/workflows/build-all-in-one-image.yml
@@ -8,11 +8,6 @@ on:
   release:
     types: [published]
 
-env:
-  ILLA_MUI_LICENSE: ${{ secrets.ILLA_MUI_LICENSE }}
-  DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
-  DOCKER_PWD: ${{ secrets.DOCKER_PWD }}
-
 jobs:
   build:
     name: Build docker image
@@ -39,20 +34,29 @@ jobs:
           repository: illacloud/build-all-in-one-image
           path: build-all-in-one-image
 
-      - name: Build Docker Image
-        run: |
-          cd ./build-all-in-one-image
-          docker build -f ./dockerfile -t illasoft/illa-builder:${IMAGE_TAG} --build-arg FE=${BUILD_FE_BRANCH} --build-arg BE=${BUILD_BE_BRANCH} --build-arg SBE=${BUILD_SBE_BRANCH} --no-cache --build-arg ILLA_MUI_LICENSE=${ILLA_MUI_LICENSE} .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Push Docker image
-        run: |
-          docker login -u $DOCKER_LOGIN -p $DOCKER_PWD
-          docker push illasoft/illa-builder:${IMAGE_TAG}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Release Docker image
-        if:
-          github.event_name == 'release' &&
-          startsWith(github.event.release.tag_name, 'illa-builder@')
-        run: |
-          docker tag illasoft/illa-builder:${IMAGE_TAG} illasoft/illa-builder:latest
-          docker push illasoft/illa-builder:latest
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_LOGIN }}
+          password: ${{ secrets.DOCKER_PWD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: ./build-all-in-one-image
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: true
+          tags: |
+            illasoft/illa-builder:${{ env.IMAGE_TAG }}
+            illasoft/illa-builder:latest
+          build-args: |
+            FE=${{ env.BUILD_FE_BRANCH }}
+            BE=${{ env.BUILD_BE_BRANCH }}
+            SBE=${{ env.BUILD_SBE_BRANCH }}
+            ILLA_MUI_LICENSE=${{ secrets.ILLA_MUI_LICENSE }}
