feat: ✨ add missing resource

--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -55,6 +55,7 @@
     "@illa-public/invite-modal": "workspace:*",
     "@illa-public/layout-auto-change": "workspace:*",
     "@illa-public/market-agent": "workspace:*",
+    "@illa-public/missing-resource-module": "workspace:^",
     "@illa-public/mixpanel-utils": "workspace:*",
     "@illa-public/public-configs": "workspace:*",
     "@illa-public/public-types": "workspace:*",
