chore: update sentry config

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -84,5 +84,5 @@ jobs:
       - name: Deploy to Kubernetes
         run: |
           cd k8s-application-do/namespace-$ILLA_APP_ENV
-          kubectl delete pod -n $ILLA_APP_ENV -l repo=illa-builder-frontend
           kubectl apply -f ./illa-builder-frontend/ -n $ILLA_APP_ENV
+          kubectl -n $ILLA_APP_ENV rollout restart deployment illa-builder-frontend
