--- a/apps/builder/.env.cloud
+++ b/apps/builder/.env.cloud
@@ -8,3 +8,4 @@ ILLA_GOOGLE_MAP_KEY=google_map_key
 ILLA_MIXPANEL_API_KEY=0
 ILLA_BUILDER_URL=BUILDER_PATH
 ILLA_MARKET_URL=MARKET_PATH
+ILLA_SENTRY_AUTH_TOKEN=SENTRY_AUTH_TOKEN
