feat: add qr code widget
feat: remove data grid support qr code

--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -47,6 +47,7 @@
     "@illa-design/react": "workspace:*",
     "@illa-public/avatar": "workspace:*",
     "@illa-public/code-editor": "workspace:*",
+    "@illa-public/create-app": "workspace:*",
     "@illa-public/cropper": "workspace:*",
     "@illa-public/dynamic-string": "workspace:^",
     "@illa-public/icon": "workspace:*",
@@ -56,6 +57,7 @@
     "@illa-public/invite-modal": "workspace:*",
     "@illa-public/layout-auto-change": "workspace:*",
     "@illa-public/market-agent": "workspace:*",
+    "@illa-public/market-app": "workspace:*",
     "@illa-public/missing-resource-module": "workspace:^",
     "@illa-public/mixpanel-utils": "workspace:*",
     "@illa-public/public-configs": "workspace:*",
@@ -69,8 +71,6 @@
     "@illa-public/user-data": "workspace:*",
     "@illa-public/user-role-utils": "workspace:*",
     "@illa-public/utils": "workspace:*",
-    "@illa-public/create-app": "workspace:*",
-    "@illa-public/market-app": "workspace:*",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/x-data-grid-premium": "^6.18.2",
@@ -108,6 +108,7 @@
     "overlap-area": "^1.1.0",
     "papaparse": "^5.4.1",
     "pdfjs-dist": "2.16.105",
+    "qrcode.react": "^3.1.0",
     "qs": "^6.11.2",
     "rc-virtual-list": "^3.4.2",
     "re-resizable": "^6.9.9",
