feat: add amplitude

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -10,6 +10,7 @@ on:
 env:
   ILLA_GOOGLE_MAP_KEY: ${{ secrets.ILLA_GOOGLE_MAP_KEY }}
   ILLA_MIXPANEL_API_KEY: ${{ secrets.ILLA_MIXPANEL_API_KEY }}
+  ILLA_AMPLITUDEAPI_KEY: ${{ secrets.ILLA_AMPLITUDE_API_KEY }}
   ILLA_MUI_LICENSE: ${{ secrets.ILLA_MUI_LICENSE }}
   ILLA_SENTRY_AUTH_TOKEN: ${{ secrets.ILLA_SENTRY_AUTH_TOKEN }}
   DO_CLUSTER: ${{ secrets.DO_CLUSTER }}
