--- a/apps/builder/.env.cloud
+++ b/apps/builder/.env.cloud
@@ -6,6 +6,7 @@ ILLA_APP_VERSION=0.0.0
 ILLA_APP_ENV=production
 ILLA_GOOGLE_MAP_KEY=google_map_key
 ILLA_MIXPANEL_API_KEY=0
+ILLA_AMPLITUDE_API_KEY=0
 ILLA_BUILDER_URL=BUILDER_PATH
 ILLA_MARKET_URL=MARKET_PATH
 ILLA_SENTRY_AUTH_TOKEN=SENTRY_AUTH_TOKEN
