--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -99,6 +99,7 @@
     "fflate": "^0.8.1",
     "framer-motion": "^10.16.4",
     "fuse.js": "^6.6.2",
+    "html5-qrcode": "^2.3.8",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "klona": "^2.0.6",
