fix: update agent markdown show

--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -131,6 +131,7 @@
     "react-router-dom": "^6.14.0",
     "react-selecto": "^1.22.0",
     "react-slick": "^0.29.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
     "react-use-measure": "^2.1.1",
     "react-virtuoso": "^4.3.11",
@@ -138,6 +139,7 @@
     "react-window-infinite-loader": "^1.0.9",
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^3.0.1",
     "streamsaver": "^2.0.6",
     "tern": "^0.24.3",
@@ -163,6 +165,7 @@
     "@types/react-big-calendar": "^1.6.4",
     "@types/react-pdf": "^6.2.0",
     "@types/react-slick": "^0.23.10",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/react-window": "^1.8.5",
     "@types/react-window-infinite-loader": "^1.0.6",
     "@types/streamsaver": "^2.0.1",
