fix: sentry DSN

--- a/apps/builder/.env.cloud
+++ b/apps/builder/.env.cloud
@@ -1,6 +1,6 @@
 ILLA_API_BASE_URL=CLOUD_API_PATH
 ILLA_CLOUD_URL=CLOUD_PATH
-ILLA_SENTRY_SERVER_API=https://d471afe04ac2e9c62c7214eae9e6e31a@o4506653590880256.ingest.sentry.io/4506653593894912
+ILLA_SENTRY_SERVER_API=https://d471afe04ac2e9c62c7214eae9e6e31a@o4506653590880256.ingest.us.sentry.io/4506653593894912
 ILLA_INSTANCE_ID=CLOUD
 ILLA_APP_VERSION=0.0.0
 ILLA_APP_ENV=production
