feat: ✨ update docker file & nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -34,5 +34,23 @@ http {
 
     keepalive_timeout  65;
 
-    include /etc/nginx/conf.d/*.conf;
+    server {
+        listen 80;
+        server_name localhost;
+        access_log  /dev/stdout;
+        error_log   /dev/stderr;
+        root /opt/illa/illa-builder-frontend/;
+        index index.html;
+        gzip on;
+
+        sub_filter_once off;
+        location / {
+            try_files $uri $uri/ /index.html;
+            expires -1;
+        }
+
+        location /assets {
+            expires 1y;
+        }
+    }
 }
